--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <a href="./pages/action/señoranillos.html"
                 ><img
                   src="./imgs/posters/accion/señordelosanillos.png"
-                  alt="Justice League"
+                  alt="Señor de los Anillos"
                   width="200px"
               /></a>
             </div>
