Compress and change format to images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="movie">
               <a href="./pages/action/startwars.html"
                 ><img
-                  src="./imgs/posters/accion/starwars.png"
+                  src="./imgs/posters/accion/Star wars.webp"
                   alt="Star Wars"
                   width="200px"
               /></a>
@@ -95,7 +95,7 @@
             <div class="movie">
               <a href="./pages/action/harrypotter4.html">
                 <img
-                  src="./imgs/posters/accion/harrypoto.png"
+                  src="./imgs/posters/accion/Harry Potter.webp"
                   alt="Harry Potter"
                   width="200px"
               /></a>
@@ -103,7 +103,7 @@
             <div class="movie">
               <a href="./pages/action/avengersendgame.html">
                 <img
-                  src="./imgs/posters/accion/avengers.png"
+                  src="./imgs/posters/accion/Endgame Avengers.webp"
                   alt="Avengers: Endgame"
                   width="200px"
               /></a>
@@ -111,7 +111,7 @@
             <div class="movie">
               <a href="./pages/action/justiceleague.html"
                 ><img
-                  src="./imgs/posters/accion/justiceleague.png"
+                  src="./imgs/posters/accion/Justice League.webp"
                   alt="Justice League"
                   width="200px"
               /></a>
@@ -119,7 +119,7 @@
             <div class="movie">
               <a href="./pages/action/señoranillos.html"
                 ><img
-                  src="./imgs/posters/accion/señordelosanillos.png"
+                  src="./imgs/posters/accion/El señor de los anillos.webp"
                   alt="Señor de los Anillos"
                   width="200px"
               /></a>
@@ -141,7 +141,7 @@
             <div class="movie">
               <a href="./pages/romanticas/adosmetrosdeti.html">
                 <img
-                  src="./imgs/posters/romanticas/adosmetrosdeti.jpg"
+                  src="./imgs/posters/romanticas/A dos metros de ti.webp"
                   alt="A dos metros de ti"
                   class="size"
               /></a>
@@ -164,7 +164,7 @@
             <div class="movie">
               <a href="./pages/romanticas/orgulloyprejuicio.html">
                 <img
-                  src="./imgs/posters/romanticas/orgulloyprejuicio.jpg"
+                  src="./imgs/posters/romanticas/Orgullo y prejuicio.webp"
                   alt="Orgullo y Prejuicio"
                   class="size"
               /></a>
