Change Nombre and LOGO from png to webp

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     />
     <title>CheeCinema</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="icon" href="./imgs/LOGO.png" />
+    <link rel="icon" href="./imgs/LOGO.webp" />
   </head>
   <body>
     <header>
       <div class="cabezera">
         <div>
-          <img src="./imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="./imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div>
-          <img src="./imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="./imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -54,17 +54,21 @@
             alt="Facebook"
             class="brands"
           />
-          <img
-            src="./imgs/icons/instagram.svg"
-            alt="instagram"
-            class="brands"
-          />
-          <img
-            src="./imgs/icons/square-twitter.svg"
-            alt="Twitter"
-            class="brands"
-          />
-          <img src="./imgs/icons/tiktok.svg" alt="Tik Tok" class="brands" />
+          <a href="https://www.instagram.com/cheecinema_oficial/">
+            <img
+              src="./imgs/icons/instagram.svg"
+              alt="instagram"
+              class="brands"
+          /></a>
+          <a href="https://twitter.com/F3RCH0160">
+            <img
+              src="./imgs/icons/square-twitter.svg"
+              alt="Twitter"
+              class="brands"
+          /></a>
+          <a href="www.tiktok.com/@cheecinema_oficial">
+            <img src="./imgs/icons/tiktok.svg" alt="Tik Tok" class="brands" />
+          </a>
         </div>
       </div>
     </header>
