--- a/pages/animation/bellaylabestia.html
+++ b/pages/animation/bellaylabestia.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -67,17 +67,15 @@
           <h1 class="cool-font">La bella y la bestia</h1>
           <div class="resumen">
             <p>
-              Sinopsis: Una hermosa joven llamada Bella, acepta alojarse en un castillo con una bestia a cambio de la libertad de su padre. El animal es en realidad un príncipe encantado que, para romper el hechizo, tendrá que ganarse el amor de una dama.
+              Sinopsis: Una hermosa joven llamada Bella, acepta alojarse en un
+              castillo con una bestia a cambio de la libertad de su padre. El
+              animal es en realidad un príncipe encantado que, para romper el
+              hechizo, tendrá que ganarse el amor de una dama.
             </p>
-            <p>Duración:  129 minutos
-</p>
+            <p>Duración: 129 minutos</p>
             <div>
-              <p>Reparto:
-
-
-</p>
+              <p>Reparto:</p>
               <ul>
-
                 <li>Emma Watson</li>
                 <li>Dan Stevens</li>
                 <li>Luke Evans</li>
@@ -92,4 +90,3 @@
     </main>
   </body>
 </html>
- 
