--- a/pages/animation/up.html
+++ b/pages/animation/up.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -67,13 +67,16 @@
           <h1 class="cool-font">UP</h1>
           <div class="resumen">
             <p>
-                Carl Fredricksen es un vendedor de globos de 78 años de edad dispuesto a cumplir su sueño: atar miles de globos a su casa y volar a Sudamérica. 
-                Sin embargo, descubre demasiado tarde a un joven e inesperado polizón. Lo que en principio será recelo, acabará por tornarse simpatía hacia el 
-                muchacho mientras juntos pasan fascinantes aventuras en exóticos lugares.
+              Carl Fredricksen es un vendedor de globos de 78 años de edad
+              dispuesto a cumplir su sueño: atar miles de globos a su casa y
+              volar a Sudamérica. Sin embargo, descubre demasiado tarde a un
+              joven e inesperado polizón. Lo que en principio será recelo,
+              acabará por tornarse simpatía hacia el muchacho mientras juntos
+              pasan fascinantes aventuras en exóticos lugares.
             </p>
             <p>Duración: 116 minutos</p>
             <div>
-              <p>Reparto: </p>
+              <p>Reparto:</p>
               <ul>
                 <li>Ed Asner, Jeremy Leary</li>
                 <li>Jordan Nagai, Sebastian Warholm</li>
