--- a/pages/action/avatar.html
+++ b/pages/action/avatar.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -67,12 +67,14 @@
           <h1 class="cool-font">AVATAR</h1>
           <div class="resumen">
             <p>
-              Sinopsis: Jake Sully y Ney'tiri han formado una familia y hacen todo lo posible por permanecer juntos. 
-              Sin embargo, deben abandonar su hogar y explorar las regiones de Pandora cuando una antigua amenaza reaparece.
+              Sinopsis: Jake Sully y Ney'tiri han formado una familia y hacen
+              todo lo posible por permanecer juntos. Sin embargo, deben
+              abandonar su hogar y explorar las regiones de Pandora cuando una
+              antigua amenaza reaparece.
             </p>
             <p>Duración: 162 minutos</p>
             <div>
-              <p>Reparto: </p>
+              <p>Reparto:</p>
               <ul>
                 <li>Zoe Saldaña</li>
                 <li>Sam Worthington</li>
