--- a/pages/animation/aladdin.html
+++ b/pages/animation/aladdin.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -64,29 +64,24 @@
           <img src="../../imgs/posters" alt="" width="400px" />
         </div>
         <div class="text">
-          <h1 class="cool-font">Aladdin </h1>
+          <h1 class="cool-font">Aladdin</h1>
           <div class="resumen">
             <p>
-              Sinopsis:  Aladdin es un ladronzuelo que se enamora de la hija del Sultán, la princesa Jasmine. Para poder conquistarla aceptará un desafío de Jafar. Aladdín tendrá que entrar en una cueva en mitad del desierto y conseguir una lámpara mágica que contiene al Genio que será el encargado de concederle todos sus deseos.
-
-
+              Sinopsis: Aladdin es un ladronzuelo que se enamora de la hija del
+              Sultán, la princesa Jasmine. Para poder conquistarla aceptará un
+              desafío de Jafar. Aladdín tendrá que entrar en una cueva en mitad
+              del desierto y conseguir una lámpara mágica que contiene al Genio
+              que será el encargado de concederle todos sus deseos.
             </p>
-            <p>Duración: 128 minutos
-
-
-</p>
+            <p>Duración: 128 minutos</p>
             <div>
-              <p>Reparto:
-
-
-</p>
+              <p>Reparto:</p>
               <ul>
-
                 <li>Mena Massoud</li>
                 <li>Naomi Scott</li>
                 <li>Will Smith</li>
                 <li>Marwan Kenzari</li>
-                <li>Navid Negahbano </li>
+                <li>Navid Negahbano</li>
               </ul>
             </div>
             <p>Director:Kenneth Branagh</p>
@@ -96,4 +91,3 @@
     </main>
   </body>
 </html>
- 
