--- a/pages/animation/cars.html
+++ b/pages/animation/cars.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -67,14 +67,14 @@
           <h1 class="cool-font">CARS</h1>
           <div class="resumen">
             <p>
-                De camino al prestigioso campeonato Copa Pistón, un automóvil de carreras que sólo se preocupa por 
-                ganar aprende sobre lo que realmente es importante en la vida de varios vehículos que viven en un 
-                pueblo a lo largo de la histórica Ruta 66.
-
+              De camino al prestigioso campeonato Copa Pistón, un automóvil de
+              carreras que sólo se preocupa por ganar aprende sobre lo que
+              realmente es importante en la vida de varios vehículos que viven
+              en un pueblo a lo largo de la histórica Ruta 66.
             </p>
             <p>Duración: 117 minutos</p>
             <div>
-              <p>Reparto: </p>
+              <p>Reparto:</p>
               <ul>
                 <li>Owen Wilson, David Owe</li>
                 <li>Larry the Cable Guy, Fan Wei</li>
