--- a/pages/animation/cenicienta.html
+++ b/pages/animation/cenicienta.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -64,23 +64,20 @@
           <img src="../../imgs/posters" alt="" width="400px" />
         </div>
         <div class="text">
-          <h1 class="cool-font">Cenicienta
-</h1>
+          <h1 class="cool-font">Cenicienta</h1>
           <div class="resumen">
             <p>
-              Sinopsis:  La idílica vida de la preciosa Ella se viene abajo cuando, tras la muerte de su madre, su padre se vuelve a casar. La joven quiere apoyar a su padre y acoge con cariño en la casa familiar a su madrastra y a sus hijas, Anastasia y Drisella. Sin embargo, cuando el padre de Ella muere inesperadamente, la joven se encuentra a merced de una nueva familia celosa y cruel.
-
+              Sinopsis: La idílica vida de la preciosa Ella se viene abajo
+              cuando, tras la muerte de su madre, su padre se vuelve a casar. La
+              joven quiere apoyar a su padre y acoge con cariño en la casa
+              familiar a su madrastra y a sus hijas, Anastasia y Drisella. Sin
+              embargo, cuando el padre de Ella muere inesperadamente, la joven
+              se encuentra a merced de una nueva familia celosa y cruel.
             </p>
-            <p>Duración:106 minutos
-
-</p>
+            <p>Duración:106 minutos</p>
             <div>
-              <p>Reparto:
-
-
-</p>
+              <p>Reparto:</p>
               <ul>
-
                 <li>Lily James</li>
                 <li>Richard Madden</li>
                 <li>Cate Blanchett</li>
@@ -95,4 +92,3 @@
     </main>
   </body>
 </html>
- 
