--- a/pages/animation/lightyear.html
+++ b/pages/animation/lightyear.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -67,12 +67,14 @@
           <h1 class="cool-font">LIGHTYEAR</h1>
           <div class="resumen">
             <p>
-                Buzz Lightyear se embarca en una aventura intergaláctica con un grupo de reclutas ambiciosos y su compañero robot.
-                Los amigos tendrán que aprender a trabajar juntos para escapar del malvado Zurg y su ejército de robots.
+              Buzz Lightyear se embarca en una aventura intergaláctica con un
+              grupo de reclutas ambiciosos y su compañero robot. Los amigos
+              tendrán que aprender a trabajar juntos para escapar del malvado
+              Zurg y su ejército de robots.
             </p>
             <p>Duración: 105 minutos</p>
             <div>
-              <p>Reparto: </p>
+              <p>Reparto:</p>
               <ul>
                 <li>Chris Evans</li>
                 <li>Taika Waititi</li>
