--- a/pages/romanticas/Eternamenteenamorados.html
+++ b/pages/romanticas/Eternamenteenamorados.html
@@ -11,7 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.png" alt="Logo" class="himg" />
+          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
           <nav>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <img src="../../imgs/Nombre.png" alt="CheeCinema" class="himg" />
+          <img src="../../imgs/Nombre.webp" alt="CheeCinema" class="himg" />
         </div>
       </div>
       <div class="trend-bar">
@@ -64,14 +64,23 @@
           <img src="../../imgs/posters" alt="" width="400px" />
         </div>
         <div class="text">
-          <h1 class="cool-font">Eterno resplandor de una mente sin recuerdos</h1>
+          <h1 class="cool-font">
+            Eterno resplandor de una mente sin recuerdos
+          </h1>
           <div class="resumen">
             <p>
-              Sinopsis: Joel recibe un terrible golpe cuando descubre que su novia, Clementine, ha hecho que borren de su memoria todos los recuerdos de su tormentosa relación. Desesperado, quiere que hagan lo mismo con él. 
+              Sinopsis: Joel recibe un terrible golpe cuando descubre que su
+              novia, Clementine, ha hecho que borren de su memoria todos los
+              recuerdos de su tormentosa relación. Desesperado, quiere que hagan
+              lo mismo con él.
             </p>
             <p>Duración: 1h 48m</p>
             <div>
-              <p>Reparto: Jim Carrey, Kate Winslet, Kirsten Dunst, Elijah Wood, Mark Ruffalo, Tom Wikinson, Debbon Ayer, Gerry Byrne, David Cross, Jane Adams, Thomas Jay Ryan, Poni Adams, Josh Flitter</p>
+              <p>
+                Reparto: Jim Carrey, Kate Winslet, Kirsten Dunst, Elijah Wood,
+                Mark Ruffalo, Tom Wikinson, Debbon Ayer, Gerry Byrne, David
+                Cross, Jane Adams, Thomas Jay Ryan, Poni Adams, Josh Flitter
+              </p>
               <ul>
                 <li></li>
                 <li></li>
