--- a/pages/romanticas/orgulloyprejuicio.html
+++ b/pages/romanticas/orgulloyprejuicio.html
@@ -62,7 +62,7 @@
       <div class="movie-container">
         <div>
           <img
-            src="../../imgs/posters/romanticas/orgulloyprejuicio.jpg"
+            src="../../imgs/posters/romanticas/Orgullo y prejuicio.webp"
             alt="Orgullo y Prejuicio"
             width="400px"
           />
