--- a/index.html
+++ b/index.html
@@ -178,8 +178,66 @@
       </div>
     </main>
     <footer>
-      <div>
-        <h3>Copyright @Maplecompany</h3>
+      <div class="footer-content">
+        <div>
+          <ul class="footer-list">
+            <a href="#" class="footer-link"><li>Legal Warning</li></a>
+            <a href="#" class="footer-link"><li>Quality Policy</li></a>
+            <a href="#" class="footer-link"><li>Privacy Policy</li></a>
+            <a href="#" class="footer-link"><li>Cookies Policy</li></a>
+          </ul>
+        </div>
+        <div class="footer-middle">
+          <div>
+            <img
+              src="./imgs/LOGODENOMBRE.webp"
+              alt="CheeCinema"
+              width="400px"
+              height="200px"
+            />
+          </div>
+          <hr />
+          <div class="footer-social-net">
+            <div>
+              <img
+                src="./imgs/icons/square-facebook.svg"
+                alt="Facebook"
+                class="brands"
+              />
+              <a href="https://www.instagram.com/cheecinema_oficial/">
+                <img
+                  src="./imgs/icons/instagram.svg"
+                  alt="instagram"
+                  class="brands"
+              /></a>
+              <a href="https://twitter.com/F3RCH0160">
+                <img
+                  src="./imgs/icons/square-twitter.svg"
+                  alt="Twitter"
+                  class="brands"
+              /></a>
+              <a href="www.tiktok.com/@cheecinema_oficial">
+                <img
+                  src="./imgs/icons/tiktok.svg"
+                  alt="Tik Tok"
+                  class="brands"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div>
+          <ul class="footer-list">
+            <a href="#" class="footer-link"><li>CheeCinema</li></a>
+            <a href="#" class="footer-link"><li>Blog</li></a>
+            <a href="#" class="footer-link"><li>Contact</li></a>
+            <a href="#" class="footer-link"><li>FAQs</li></a>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <h2>CheeCinema Brands International</h2>
+        <h2>CheeseWorkers, 27 (TI.Luncher) 0B79RV Mexico City (Mexico</h2>
       </div>
     </footer>
   </body>
