Fix a tags in lists in footer -list

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
       <div class="footer-content">
         <div>
           <ul class="footer-list">
-            <a href="#" class="footer-link"><li>Legal Warning</li></a>
-            <a href="#" class="footer-link"><li>Quality Policy</li></a>
-            <a href="#" class="footer-link"><li>Privacy Policy</li></a>
-            <a href="#" class="footer-link"><li>Cookies Policy</li></a>
+            <li><a href="#" class="footer-link">Legal Warning </a></li>
+            <li><a href="#" class="footer-link">Quality Policy</a></li>
+            <li><a href="#" class="footer-link">Privacy Policy</a></li>
+            <li><a href="#" class="footer-link">Cookies Policy</a></li>
           </ul>
         </div>
         <div class="footer-middle">
@@ -228,10 +228,10 @@
         </div>
         <div>
           <ul class="footer-list">
-            <a href="#" class="footer-link"><li>CheeCinema</li></a>
-            <a href="#" class="footer-link"><li>Blog</li></a>
-            <a href="#" class="footer-link"><li>Contact</li></a>
-            <a href="#" class="footer-link"><li>FAQs</li></a>
+            <li><a href="#" class="footer-link">CheeCinema</a></li>
+            <li><a href="#" class="footer-link">Blog </a></li>
+            <li><a href="#" class="footer-link">Contact </a></li>
+            <li><a href="#" class="footer-link">FAQs </a></li>
           </ul>
         </div>
       </div>
