Add footer and styling to all movies pages

--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
               /></a>
             </div>
             <div class="movie">
-              <img
-                src="./imgs/posters/accion/avatar.png"
-                alt="Avatar"
-                width="200px"
-              />
+              <a href="./pages/action/avatar.html">
+                <img
+                  src="./imgs/posters/accion/avatar.png"
+                  alt="Avatar"
+                  width="200px"
+                />
+              </a>
             </div>
           </div>
         </div>
