--- a/pages/action/harrypotter4.html
+++ b/pages/action/harrypotter4.html
@@ -11,7 +11,9 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
+          <a href="../../index.html">
+            <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
+          </a>
         </div>
         <div>
           <nav>
@@ -62,7 +64,7 @@
       <div class="movie-container">
         <div>
           <img
-            src="../../imgs/posters/accion/harrypoto.png"
+            src="../../imgs/posters/accion/Harry Potter.webp"
             alt="Star Wars: Una nueva esperanza"
             width="400px"
           />
@@ -92,5 +94,68 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="footer-content">
+        <div>
+          <ul class="footer-list">
+            <li><a href="#" class="footer-link">Legal Warning </a></li>
+            <li><a href="#" class="footer-link">Quality Policy</a></li>
+            <li><a href="#" class="footer-link">Privacy Policy</a></li>
+            <li><a href="#" class="footer-link">Cookies Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-middle">
+          <div>
+            <img
+              src="../../imgs/LOGODENOMBRE.webp"
+              alt="CheeCinema"
+              width="400px"
+              height="200px"
+            />
+          </div>
+          <hr />
+          <div class="footer-social-net">
+            <div>
+              <img
+                src="../../imgs/icons/square-facebook.svg"
+                alt="Facebook"
+                class="brands"
+              />
+              <a href="https://www.instagram.com/cheecinema_oficial/">
+                <img
+                  src="../../imgs/icons/instagram.svg"
+                  alt="instagram"
+                  class="brands"
+              /></a>
+              <a href="https://twitter.com/F3RCH0160">
+                <img
+                  src="../../imgs/icons/square-twitter.svg"
+                  alt="Twitter"
+                  class="brands"
+              /></a>
+              <a href="www.tiktok.com/@cheecinema_oficial">
+                <img
+                  src="../../imgs/icons/tiktok.svg"
+                  alt="Tik Tok"
+                  class="brands"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div>
+          <ul class="footer-list">
+            <li><a href="#" class="footer-link">CheeCinema</a></li>
+            <li><a href="#" class="footer-link">Blog </a></li>
+            <li><a href="#" class="footer-link">Contact </a></li>
+            <li><a href="#" class="footer-link">FAQs </a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <h2>CheeCinema Brands International</h2>
+        <h2>CheeseWorkers, 27 (TI.Luncher) 0B79RV Mexico City (Mexico</h2>
+      </div>
+    </footer>
   </body>
 </html>
