--- a/pages/romanticas/bajolamismaestrella.html
+++ b/pages/romanticas/bajolamismaestrella.html
@@ -11,6 +11,7 @@
     <header>
       <div class="cabezera">
         <div>
+          <a href="../../index.html"></a>
           <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
         </div>
         <div>
