--- a/pages/romanticas/orgulloyprejuicio.html
+++ b/pages/romanticas/orgulloyprejuicio.html
@@ -11,7 +11,9 @@
     <header>
       <div class="cabezera">
         <div>
-          <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
+          <a href="../../index.html">
+            <img src="../../imgs/LOGO.webp" alt="Logo" class="himg" />
+          </a>
         </div>
         <div>
           <nav>
