Add series to website

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <nav>
             <ul>
               <li><a href="#" class="links">Movies</a></li>
-              <li><a href="#" class="links">Series</a></li>
+              <li><a href="./pages/series.html" class="links">Series</a></li>
               <li><a href="#" class="links">TV Shows</a></li>
               <li><a href="#" class="links">News</a></li>
             </ul>
